--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="cover">
         <div class="intro">
-            <h2>Name: B.S.S.RAMANA.RAJU</h2>
-            <h2>Registration No: 21BCE8051</h2>
+            <h2>Name: Piyush Kumar</h2>
+            <h2>Registration No: 21BCE3077</h2>
             <h2>Task 2 - BootStrap and JavaScript</h2>
             <p>Click the links below to view the tasks:</p>
         </div>
